Fix Nginx forwarding and set a shorter polling interval.

--- a/server/index.html
+++ b/server/index.html
@@ -43,7 +43,7 @@
         screenshotButton.disabled = true;
         viewGalleryButton.disabled = true;
 
-        const response = await fetch('/fetch', {method: 'GET'});
+        const response = await fetch('fetch', {method: 'GET'});
         screenshotButton.disabled = false;
         viewGalleryButton.disabled = false;
 
